--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mahum.ikram\AppData\Local\Temp\testng-eclipse-669905773\testng-customsuite.xml</span>
+                    <span>C:\Users\mahum.ikram\AppData\Local\Temp\testng-eclipse--1557734862\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="file.DynamicJson" class="method navigator-link" hash-for-method="addBook">addBook</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="file.DynamicJson" class="method navigator-link" hash-for-method="addBook(bscss, 212112)">addBook(bscss, 212112)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="file.DynamicJson" class="method navigator-link" hash-for-method="addBook(bcssas, 221112)">addBook(bcssas, 221112)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="file.DynamicJson" class="method navigator-link" hash-for-method="addBook(bcass, 222112)">addBook(bcass, 222112)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +137,26 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addBook">
-                  </a> <!-- addBook -->
+                  <a name="addBook(bscss, 212112)">
+                  </a> <!-- addBook(bscss, 212112) -->
                   <span class="method-name">addBook</span>
+                  <span class="parameters">(bscss, 212112)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addBook(bcssas, 221112)">
+                  </a> <!-- addBook(bcssas, 221112) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(bcssas, 221112)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addBook(bcass, 222112)">
+                  </a> <!-- addBook(bcass, 222112) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(bcass, 222112)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +164,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mahum.ikram\AppData\Local\Temp\testng-eclipse-669905773\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mahum.ikram\AppData\Local\Temp\testng-eclipse--1557734862\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,11 +213,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addBook')
 data.setCell(0, 2, 'file.DynamicJson')
-data.setCell(0, 3, 4271);
+data.setCell(0, 3, 3174);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'addBook')
+data.setCell(1, 2, 'file.DynamicJson')
+data.setCell(1, 3, 622);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'addBook')
+data.setCell(2, 2, 'file.DynamicJson')
+data.setCell(2, 3, 358);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -223,8 +258,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">file.DynamicJson</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">addBook</span>
+                <span class="method-name">addBook(bcssas, 221112)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addBook(bscss, 212112)</span>
+                <span class="method-start">3180 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addBook(bcass, 222112)</span>
+                <span class="method-start">3804 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
